--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   </div>
   <script>
     const archives = [
+      {title: "card-front-back", description: "make card", url: "card-front-back.html"},
+      {title: "pseduo-element", description: "css, pseudo-elemnt(::before, ::after)", url: "pseduo-element.html"},
       {title: "transform", description: "transform test", url: "transform.html",},
       {title: "flex-grow", description: "flex-grow: dynamic-example", url: "flex-grow.html",},
       // Test2는 썸네일 이미지 없음
